# native_emerald

./: .gitignore  API_REFERENCE.md  ARCHITECTURE.md  BUILD_GUIDE.md  CMakeLists.txt  CPU_STATUS.md  IMPLEMENTATION.md  QUICK_START.md  README.md  STATUS.md  TRAINING_GUIDE.md  bios.c  bios.h  cpu_core.c  cpu_core.h  debug_stuck.sh  debug_trace.c  debug_trace.h  dma.c  dma.h  game_state.c  game_state.h  gfx_renderer.c  gfx_renderer.h  input.c  input.h  interrupts.c  interrupts.h  main.c  memory.c  memory.h  python_api.c  python_api.h  rom_loader.c  rom_loader.h  rtc.c  rtc.h  save_state.c  save_state.h  stubs.c  (+9 more)
mgba-0.10.5/src/platform/windows/setup/: setup.iss.in
pokeemerald-master/: BUILD_SUCCESS.md
pokeemerald-master/include/: malloc.h
pokeemerald-master/src/: ai_input.c
pokeemerald-master/tools/custom_emulator/: ARCHITECTURE.md  QUICK_START.md  README.md  main.c  rom_loader.c  rom_loader.h
pokeemerald-master/tools/native_runner/: CMakeLists.txt  STATUS.md  ai_input.h  gba_compat.h  gba_shim.c  gba_shim.h  mlp_inference.c  policy_example.h  shims_extra.c  shims_extra.h
pokeemerald-master/tools/rl_agent/: gym_poke_env.py  mgba_bridge.lua
python/: emerald_env.py  requirements.txt  test_env.py  train_ppo.py
source/pokeemerald-master/: AI_INTEGRATION_GUIDE.md  QUICK_REFERENCE.md
source/pokeemerald-master/include/: ai_input.h  map_groups.h
source/pokeemerald-master/src/: battle_controllers.c
source/pokeemerald-master/tools/custom_emulator/: CPU_STATUS.md  STATUS.md  stubs.h
source/pokeemerald-master/tools/native_runner/: ADDING_GAME_CODE.md  README.md  ai_input.c  game_init.c  game_init.h  game_stubs.c  mlp_inference.h  native_main.c  policy_example.c
source/pokeemerald-master/tools/rl_agent/: README.md  export_mlp.py  requirements.txt  train.py
